// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unit tests for ThemedText render ThemedText when is dark theme 1`] = `
<Text
  style={
    [
      {
        "color": "#ECEDEE",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`unit tests for ThemedText render ThemedText when is light theme 1`] = `
<Text
  style={
    [
      {
        "color": "#11181C",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`unit tests for ThemedText render ThemedText when type is default 1`] = `
<Text
  style={
    [
      {
        "color": "#11181C",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`unit tests for ThemedText render ThemedText when type is defaultSemiBold 1`] = `
<Text
  style={
    [
      {
        "color": "#11181C",
      },
      undefined,
      undefined,
      {
        "fontSize": 16,
        "fontWeight": "600",
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`unit tests for ThemedText render ThemedText when type is link 1`] = `
<Text
  style={
    [
      {
        "color": "#11181C",
      },
      undefined,
      undefined,
      undefined,
      undefined,
      {
        "color": "#0a7ea4",
        "fontSize": 16,
        "lineHeight": 30,
      },
      undefined,
    ]
  }
/>
`;

exports[`unit tests for ThemedText render ThemedText when type is subtitle 1`] = `
<Text
  style={
    [
      {
        "color": "#11181C",
      },
      undefined,
      undefined,
      undefined,
      {
        "fontSize": 20,
        "fontWeight": "bold",
      },
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`unit tests for ThemedText render ThemedText when type is title 1`] = `
<Text
  style={
    [
      {
        "color": "#11181C",
      },
      undefined,
      {
        "fontSize": 32,
        "fontWeight": "bold",
        "lineHeight": 32,
      },
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
/>
`;
